--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,5 @@
 
-<!--
-Author: W3layouts
-Author URL: http://w3layouts.com
--->
+
 <!doctype html>
 <html lang="en">
 
@@ -151,7 +148,7 @@ Author URL: http://w3layouts.com
                             <div class="icon-box"> <span class="fas fa-map-marked-alt"></span></div>
                             <div class="text-box">
                                 <h3 class="mb-2">Location</h3>
-                                <p>Agrowfarm, 343, #21 Honey 1st street, NY - 502049.</p>
+                                <p>Agrowfarm, 320bangalore, #21 Honey 1st street, Siliguri - 734004.</p>
                             </div>
                         </div>
                     </div>
@@ -160,8 +157,8 @@ Author URL: http://w3layouts.com
                             <div class="icon-box"> <span class="fas fa-envelope-open-text"></span></div>
                             <div class="text-box">
                                 <h3 class="mb-2">Phone Numbers</h3>
-                                <p><a href="tel:+12 403-11-22-69">+12 403-11-22-69</a></p>
-                                <p><a href="tel:+12 304-11-22-79">+12 304-11-22-79</a></p>
+                                <p><a href="tel:+91 403-11-22-69">+91 403-11-22-69</a></p>
+                                <p><a href="tel:+91 304-11-22-79">+91 304-11-22-79</a></p>
                             </div>
                         </div>
                     </div>
@@ -170,8 +167,8 @@ Author URL: http://w3layouts.com
                             <div class="icon-box"> <span class="fas fa-blender-phone"></span></div>
                             <div class="text-box">
                                 <h3 class="mb-2">Emails</h3>
-                                <p> <a href="mailto:company@gmail.com">company@gmail.com</a></p>
-                                <p> <a href="mailto:support@gmail.com">support@gmail.com</a></p>
+                                <p> <a href="mailto:company@gmail.com">Agrocrop@gmail.com</a></p>
+                                <p> <a href="mailto:support@gmail.com">Agrocrop@gmail.com</a></p>
                             </div>
                         </div>
                     </div>
@@ -213,7 +210,7 @@ Author URL: http://w3layouts.com
                     <div class="col-lg-3 col-sm-6 mt-sm-0 mt-4 ps-lg-5">
                         <div class="address-grid">
                             <h5>Phone</h5>
-                            <h5 class="phone-number-text mt-2"><a href="tel:+1(21) 112 7368">+1(21) 112 7368</a></h5>
+                            <h5 class="phone-number-text mt-2"><a href="tel:+91(21) 112 7368">+1(21) 112 7368</a></h5>
                         </div>
                         <div class="address-grid mt-sm-5 mt-4">
                             <h5>E-mail</h5>
