--- a/contact.html
+++ b/contact.html
@@ -202,7 +202,7 @@
                 <div class="row footer-top-29 pt-lg-5 pt-sm-4">
                     <div class="col-lg-3 col-sm-6">
                         <div class="address-grid">
-                            <h5>10009 Agrofam st, 5th Avenue, 436 Honey <br> London.</h5>
+                            <h5>10009 Agrofam st, 5th Avenue, 436 Honey <br> Kolkata.</h5>
                             <p class="mt-4">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor </p>
 
                         </div>
@@ -210,7 +210,7 @@
                     <div class="col-lg-3 col-sm-6 mt-sm-0 mt-4 ps-lg-5">
                         <div class="address-grid">
                             <h5>Phone</h5>
-                            <h5 class="phone-number-text mt-2"><a href="tel:+91(21) 112 7368">+1(21) 112 7368</a></h5>
+                            <h5 class="phone-number-text mt-2"><a href="tel:+91(21) 112 7368">+91(21) 112 7368</a></h5>
                         </div>
                         <div class="address-grid mt-sm-5 mt-4">
                             <h5>E-mail</h5>
